Address review, and more overflow fixes

--- a/src/scss/patterns/_icon-blocks.scss
+++ b/src/scss/patterns/_icon-blocks.scss
@@ -1,5 +1,6 @@
 [icon-grid] {
   --fill: var(--icon);
+  --media-justify: start;
 }
 
 [icon-grid='full'] {
@@ -8,14 +9,10 @@
 }
 
 [icon-grid='fit'] {
-  --column: wide;
+  --column: page;
   --media-size: 1.5lh;
   display: grid;
   gap: var(--gutter);
   grid-template-columns: repeat(auto-fit, minmax(min(25ch, 100%), 1fr));
   margin-block-end: var(--spacer);
-}
-
-.icon-block {
-  --column: var(--icon-block-column, wide / page);
 }
