--- a/src/scss/patterns/_media.scss
+++ b/src/scss/patterns/_media.scss
@@ -47,7 +47,7 @@
 /// @group media
 .media-image {
   grid-area: image;
-  justify-self: center;
+  justify-self: var(--media-justify, center);
   max-width: var(--media-max, initial);
   min-width: var(--media-min, initial);
   width: var(--media-size, initial);
